name:                cardano-report-server
version:             0.4.0
synopsis:            Reporting server for CSL
description:         Please see README.md
homepage:            https://github.com/input-output-hk/cardano-report-server
license:             BSD3
license-file:        LICENSE
author:              Volkhov Mikhail
maintainer:          volhovm.cs@gmail.com
copyright:           2017 IOHK
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Pos.ReportServer.Report
                     , Pos.ReportServer.ClientInfo
                     , Pos.ReportServer.Exception
                     , Pos.ReportServer.FileOps
                     , Pos.ReportServer.Server
                     , Pos.ReportServer.Util
  build-depends:       aeson >= 0.11.2.1
                     , aeson-pretty >= 0.8.2
                     , base >= 4.9.0.0 && < 5.0.0.0
                     , bytestring >= 0.10.8.1
                     , case-insensitive >= 1.2.0.7
                     , directory >= 1.2.6.2
                     , exceptions >= 0.8.3
                     , filelock >= 0.1.0.1
                     , filepath >= 1.4.1.0
                     , formatting >= 6.2.4
                     , http-types >= 0.9.1
                     , lens >= 4.14
                     , lifted-base >= 0.2.3.8
                     , log-warper >= 0.3.1
                     , monad-control >= 1.0.1.0
                     , mtl >= 2.2.1
                     , network >= 2.6.3.1
                     , optparse-applicative >= 0.12.1.0
                     , parsec >= 3.1.10
                     , random >= 1.1
                     , text >= 1.2.2.1
                     , time >= 1.6.0.1
                     , transformers >= 0.5.2.0
                     , universum >= 0.2.1
                     , vector >= 0.11.0.0
                     , wai >= 3.2.1.1
                     , wai-extra >= 3.0.19
                     , warp >= 3.2.9
  ghc-options:         -Wall
  default-language:    Haskell2010
  default-extensions:  GeneralizedNewtypeDeriving
                       StandaloneDeriving
                       MultiParamTypeClasses
                       FunctionalDependencies
                       DefaultSignatures
                       NoImplicitPrelude
                       OverloadedStrings
                       RecordWildCards
                       TypeApplications
                       TupleSections
                       ViewPatterns
                       LambdaCase
                       MultiWayIf

executable cardano-report-server
  hs-source-dirs:      src/exec
  main-is:             Main.hs
  other-modules:       Options
  build-depends:       base >= 4.9.0.0 && < 5.0.0.0
                     , cardano-report-server
                     , directory >= 1.2.6.2
                     , filepath >= 1.4.1.0
                     , http-types >= 0.9.1
                     , log-warper >= 0.3.1
                     , monad-control >= 1.0.1.0
                     , mtl >= 2.2.1
                     , optparse-applicative >= 0.12.1.0
                     , parsec >= 3.1.10
                     , random >= 1.1
                     , universum >= 0.2.1
                     , wai-extra >= 3.0.19
                     , warp >= 3.2.9
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  default-language:    Haskell2010
  default-extensions:  GeneralizedNewtypeDeriving
                       StandaloneDeriving
                       MultiParamTypeClasses
                       FunctionalDependencies
                       DefaultSignatures
                       NoImplicitPrelude
                       OverloadedStrings
                       RecordWildCards
                       TypeApplications
                       TupleSections
                       ViewPatterns
                       LambdaCase
                       MultiWayIf

test-suite cardano-report-server-test
  main-is:             Test.hs
  other-modules:       Spec
                     , MainSpec
  build-depends:       HUnit >= 1.3.1.2
                     , QuickCheck
                     , aeson >= 0.11.2.1
                     , base >=4.9 && <4.10
                     , cardano-report-server
                     , hspec
                     , lens
                     , quickcheck-text >= 0.1.2.1
                     , text
                     , time >= 1.6.0.1
                     , transformers
                     , universum >= 0.2.1
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  default-language:    Haskell2010
  ghc-options:         -rtsopts -Wall -fno-warn-orphans
  default-extensions:  NoImplicitPrelude
                       OverloadedStrings
                       RecordWildCards
                       TypeApplications
                       GeneralizedNewtypeDeriving
